Edited written content, fixed project overflow, validated html and css with w3school

--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ html {
 	scroll-behavior: smooth;
 }
 
+a {
+	text-decoration: none;
+}
+
 .green-shadow {
 	text-shadow: rgb(200, 255, 82) 1px 0px 0px,
 		rgb(200, 255, 82) 0.540302px 0.841471px 0px,
@@ -88,7 +92,7 @@ html {
 
 .header-background {
 	width: 50%;
-	height: 20em;
+	height: 23em;
 }
 
 .header-title-box {
@@ -143,6 +147,10 @@ html {
 	height: fit-content;
 }
 
+.about-content h2 {
+	margin-top: 1em;
+}
+
 .about-content p {
 	margin: 1em;
 }
@@ -166,6 +174,7 @@ html {
 
 .experience {
 	width: 45%;
+	height: unset;
 }
 
 .experience ul {
@@ -173,7 +182,7 @@ html {
 	margin: 5%;
 }
 
-.experience ul li {
+.experience li {
 	margin-bottom: 5%;
 }
 
@@ -235,6 +244,7 @@ html {
 	transition: flex 0.7s ease-in;
 	box-shadow: 0 0.25em;
 	cursor: pointer;
+	overflow: hidden;
 }
 
 .project a {
@@ -244,7 +254,7 @@ html {
 }
 
 .project.active {
-	flex: 5;
+	flex: 1.5;
 	padding: 0.5em;
 	border: black solid 0.25em;
 }
@@ -278,7 +288,7 @@ html {
 }
 
 .project.active .project-info {
-	opacity: 100;
+	opacity: 1;
 	position: relative;
 	margin: 1em 2em;
 	transition: opacity 0.5s ease-in 0.6s;
@@ -351,16 +361,6 @@ html {
 }
 
 /* RESPONSIVE MEDIA QUERIES */
-
-/* $grid-breakpoints: (
-  xs: 0,
-  sm: 576px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px,
-  xxl: 1400px
-); */
-
 @media screen and (min-width: 0px) and (max-width: 576px) {
 	/* Navigation 576px */
 	#navBar {
@@ -480,7 +480,7 @@ html {
 	}
 
 	.project.active .project-info {
-		opacity: 100;
+		opacity: 1;
 		width: 95%;
 		position: relative;
 		margin: 0.75em;
@@ -615,6 +615,7 @@ html {
 
 	.experience {
 		max-width: 94%;
+		height: 60vh;
 		margin-bottom: 1em;
 	}
 
@@ -653,7 +654,7 @@ html {
 	}
 
 	.project.active .project-info {
-		opacity: 100;
+		opacity: 1;
 		width: 95%;
 		position: relative;
 		margin: 0.75em;
@@ -776,7 +777,6 @@ html {
 
 	.experience {
 		min-width: 48%;
-		height: 55vh;
 		margin-bottom: 1em;
 		padding-top: 0.5em;
 	}
@@ -815,7 +815,7 @@ html {
 	}
 
 	.project.active .project-info {
-		opacity: 100;
+		opacity: 1;
 		width: 95%;
 		position: relative;
 		margin: 0.75em;
@@ -917,7 +917,6 @@ html {
 
 	.experience {
 		min-width: 48%;
-		height: 55vh;
 		margin-bottom: 1em;
 		padding-top: 0.5em;
 	}
